syntax = "proto3";
package com.hr.pb;
option java_package = "com.hr.pb";
option java_outer_classname = "Author";
enum PBUserRegisterType
{
Local=0;
Weixin=1;
QQ=2;
}
enum PBUserGender
{
None=0;
Male=1;
Female=2;
}
message PBUser1 {
    int32 idd1 = 1;
    int32 ppt1 = 2;
repeated string test1=3;
}
message PBUser {
    int32 id = 1;
    int32 type = 2;//1=本地账号 2=微信 3=QQ
    string identity = 3;//手机号码、（微信、QQ id）
    string nickName = 4;
    PBUserGender gender = 5;//0=男 2=女
    string headIcon = 7;

}


//本地用户注册
message PBUserAdd {
    PBUser user=1;
    string md5Password = 2;
    string validCode =3;
}

//第三方用户注册，微信 和QQ
message PBUserThirdAdd {
 PBUser user=1;
    string access_token = 2;
    string refresh_token = 3;
}
